[CLEANUP] Cleans up package.json
* Bumps version number

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "generator-gruntlate",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "grunt-based project yeoman-generator",
   "author": {
-    "name" : "Sebastian Herber",
-    "email" : "herber@zaplab.at",
-    "url" : "http://www.zaplab.at"
+    "name": "Sebastian Herber",
+    "email": "herber@zaplab.at",
+    "url": "http://www.zaplab.at"
   },
   "repository": {
     "type": "git",
@@ -14,7 +14,9 @@
   "files": [
     "app"
   ],
-  "keywords": ["yeoman-generator"],
+  "keywords": [
+    "yeoman-generator"
+  ],
   "dependencies": {
     "chalk": "^1.0.0",
     "yeoman-generator": "^0.17.3"
